Next Card overlap fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,148 +1,152 @@
-*{
-    padding: 0;
-    box-sizing: border-box;
-    margin:0;
-    font-family: "Roboto", Arial, sans-serif;
+* {
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: "Roboto", Arial, sans-serif;
 }
 
-.main-container{
-    background-image: url(../img/background.png);
-    background-size: cover;
-    min-height: 100vh;
-    gap: 2rem;
+.main-container {
+  background-image: url(../img/background.png);
+  background-size: cover;
+  min-height: 100vh;
+  gap: 2rem;
 }
 
-header{
-    padding-top: 3rem;
-    display: flex;
-    align-items: center;
-    margin-left: 10rem;
-    gap: 0.2rem;
+header {
+  padding-top: 3rem;
+  display: flex;
+  align-items: center;
+  margin-left: 10rem;
+  gap: 0.2rem;
 }
 
-form{
-    margin-top: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:1rem;
+form {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-label,button{
-    font-size: 1.5rem;
+label,
+button {
+  font-size: 1.5rem;
 }
 
-input{
-    border: none;
-    border-radius: 0.5rem;
-    height: 1.5rem;
-    width: 25rem;
-    padding-left: 0.7rem;
-    padding-top: 1.2rem;
-    padding-bottom: 1.2rem;
-    font-size: 1.2rem;
-    color: rgb(68, 68, 168);
+input {
+  border: none;
+  border-radius: 0.5rem;
+  height: 1.5rem;
+  width: 25rem;
+  padding-left: 0.7rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  font-size: 1.2rem;
+  color: rgb(68, 68, 168);
 }
 
-input:focus{
-    outline:none;
+input:focus {
+  outline: none;
 }
 
-button{
-    border: none;
-    border-radius: 0.5rem;
-    height: 2rem;
-    width: 4rem;
-    cursor: pointer;
-    background: inherit;
+button {
+  border: none;
+  border-radius: 0.5rem;
+  height: 2rem;
+  width: 4rem;
+  cursor: pointer;
+  background: inherit;
 }
 
-button:hover{
-    color: rgb(68, 68, 168);
+button:hover {
+  color: rgb(68, 68, 168);
 }
 
-#logo{
-    width: 2rem;
-    height: 2rem;
+#logo {
+  width: 2rem;
+  height: 2rem;
 }
 
-h1,label,button{
-    color:white;
+h1,
+label,
+button {
+  color: white;
 }
 
-article{
-    margin-top: 3rem;
-    display:grid;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+article {
+  margin-top: 3rem;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-article > h2, .next-card > h2{
-    grid-column: -1/1;
-    color: white;
-    margin-bottom: 1rem;
+article > h2,
+.next-card > h2 {
+  grid-column: -1/1;
+  color: white;
+  margin-bottom: 1rem;
 }
 
-.next-card{
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+.next-card {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
-.card{
-    display: grid;
-    width: 40vw;
-    grid-template-columns: repeat(2,1fr);
-    gap: 1.5rem;
-    border-radius: 0.5rem;
-    padding: 1rem;
-    justify-content: center;
-    background-color: white;
-    opacity: 0.9;
-    box-sizing: border-box;
-    overflow: hidden;
+.card {
+  display: grid;
+  width: 40vw;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  justify-content: center;
+  background-color: white;
+  opacity: 0.9;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
-.curr-header{
-    grid-column: -1/1;
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0 1px 0 0 rgb(148, 146, 146);
+.curr-header {
+  grid-column: -1/1;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 1px 0 0 rgb(148, 146, 146);
 }
 
-.curr-main{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+.curr-main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.curr-main > img{
-    grid-row: 1/3;
+.curr-main > img {
+  grid-row: 1/3;
 }
 
-.curr-main > div{
-    font-size: 3rem;
-    font-weight: bold;
+.curr-main > div {
+  font-size: 3rem;
+  font-weight: bold;
 }
 
-.curr-main > div+div{
-    font-weight: normal;
-    font-size: 1rem;
+.curr-main > div + div {
+  font-weight: normal;
+  font-size: 1rem;
 }
 
-.curr-main > div+div+div{
-    font-weight: bold;
-    padding: 0.5rem;
+.curr-main > div + div + div {
+  font-weight: bold;
+  padding: 0.5rem;
 }
 
-.curr-detail{
-    display: grid;
-    gap: 1rem;
+.curr-detail {
+  display: grid;
+  gap: 1rem;
 }
 
-.curr-detail > div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 1px 0 0 rgb(148, 146, 146);
+.curr-detail > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 1px 0 0 rgb(148, 146, 146);
 }
